adding multi read at once and enhanceing the filteration
